bugfixing z-index menue

--- a/grails-app/assets/themes/laser/semantic.css
+++ b/grails-app/assets/themes/laser/semantic.css
@@ -26370,6 +26370,10 @@ Floated Menu / Item
   padding-left: 1rem;
   padding-right: 1rem;
 }
+
+#mainMenue {
+  z-index: 102;
+}
 /*!
  * # Semantic UI 2.4.2 - Message
  * http://github.com/semantic-org/semantic-ui/
